solc_mutator_ossfuzz_seed_corpus/test_sol/test_883666aaf2a574ab8e48f1a57980eab0fd7176aa69b93f27485f8029dd532b5e_dacb79b602858ab36dd7eba9106725c789f205d9_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  using L0 for *;
  event ev0(address  ep0);
  function f0(address payable i0) external    returns(int144 o0,bool o1,int136 o2)
  {
  }
  function f1() public    returns(bytes6 o0)
  {
    if (false)
    {
    }
  }
  event ev1(function () internal   returns (uint104, int104, function (address payable, bool, uint64) external   returns (bytes29, address payable, int168))  ep0);
}
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:267-416): Internal or recursive type is not allowed as event parameter type.
